画像読み込み、変更機能の作成

--- a/static/styles.css
+++ b/static/styles.css
@@ -11,3 +11,4 @@
 @import 'css/modules/visual_map.css';
 @import 'css/modules/visual_duel.css';
 @import 'css/modules/action_dock.css';
+@import 'css/modules/image_picker.css';
